@@ -1,5 +1,5 @@
 Package: MTurkR
-Version: 0.6.5.3
+Version: 0.6.5.4
 Date: 2015-06-30
 Title: R Client for the MTurk Requester API
 Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
